--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,8 @@ jobs:
 
       - name: Run molecule test
         run: molecule test
+        env: 
+          PY_COLORS : '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_DISTRO: ${{ matrix.distro }}
 
